Closed
Bug 1145037
Opened 10 years ago
Closed 10 years ago
Watching EME video hits ASSERTION: Can't handle edits with fixed durations: 'segment_duration == 0', file media\libstagefright\binding/MoofParser.cpp
Categories
(Core :: Audio/Video, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla39
Tracking | Status | |
---|---|---|
firefox39 | --- | fixed |
People
(Reporter: cpeterson, Assigned: mattwoodrow)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
992 bytes,
patch
|
ajones
:
review+
|
Details | Diff | Splinter Review |
When I watch an EME video using the Adobe or ClearKey CDM and a debug build of Firefox Nightly, I see the following (nonfatal) assertion failure every 10–20 seconds or so. I don't see this assertion failure when watching HTML5 video on YouTube.
[1836] ###!!! ASSERTION: Can't handle edits with fixed durations: 'segment_duration == 0', file c:\builds\moz2_slave\m-cen-w32-d-
000000000000000000\build\src\media\libstagefright\binding/MoofParser.cpp, line 670
Reporter | ||
Comment 1•10 years ago
|
||
Matt: is this a edts block assertion failure a Firefox bug or an encoding problem in the video?
NS_ASSERTION(segment_duration == 0, "Can't handle edits with fixed durations");
Assignee | ||
Comment 2•10 years ago
|
||
Looking at the spec [1], it seems like non-0 durations are perfectly valid.
I think this is just an invalid assertion.
[1] https://w3c.github.io/media-source/isobmff-byte-stream-format.html#iso-init-segments
Flags: needinfo?(matt.woodrow)
Reporter | ||
Comment 3•10 years ago
|
||
If this is an invalid assertion, it doesn't need to block EME MVP.
No longer blocks: 1102666
Updated•10 years ago
|
Priority: -- → P2
Assignee | ||
Comment 4•10 years ago
|
||
Assignee: nobody → matt.woodrow
Attachment #8582841 -
Flags: review?(ajones)
Updated•10 years ago
|
Attachment #8582841 -
Flags: review?(ajones) → review+
Assignee | ||
Comment 5•10 years ago
|
||
Comment 6•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in
before you can comment on or make changes to this bug.
Description
•