Bug 1145037 - Remove invalid assertion in MoofParser. r=ajones